--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,11 @@
         </activity>
         <activity
             android:name=".PlaylistActivity"
-            android:label="@string/title_activity_playlist"             />
+            android:label="@string/title_activity_playlist" />
         <activity
             android:name=".MusicStoreActivity"
-            android:label="@string/title_activity_music_store"            />
+            android:label="@string/title_activity_music_store" />
+        <activity android:name=".playlist_activity"></activity>
     </application>
 
 </manifest>
